cambio a color rosa de fondo

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -22,7 +22,7 @@ h1{
 /*estilos generales*/
 
 body{
-    background-color: #ECEEF3 ;
+    background-color: pink;
     font-family: 'Roboto', sans-serif;
 }
 
